# MafiaC

./: .gitignore  .gitmodules  BuildAll.bat  CMakeLists.txt  Clean.bat  Compile.bat  Configure.bat  Configure_VS2017_XP.bat  Configure_VS2019.bat  CopyToDropbox_Jack.bat  CopyToDropbox_Mex.bat  CopyToDropbox_Vortrex.bat  DEVGUIDE.md  README.md  Update Archive.bat  VS2017_XP.bat  VS2019.bat
Projects/: CMakeLists.txt
Projects/Hacks/: CMakeLists.txt
Projects/Hacks/DebugTest/: CMakeLists.txt  Main.cpp  Resource.rc
Projects/Hacks/Direct3D9/: CMakeLists.txt  IDirect3D8Hook.cpp  IDirect3D8Hook.h  IDirect3DDevice8Hook.cpp  IDirect3DDevice8Hook.h  Main.cpp  Resource.rc
Projects/Hacks/DirectInputHook/: CMakeLists.txt  IDirectInput8Hook.cpp  IDirectInput8Hook.h  IDirectInputDevice8Hook.cpp  IDirectInputDevice8Hook.h  Main.cpp
Projects/Hacks/Mafia2SDK/: Main.cpp  Resource.rc  m2sdk.h  pch.cpp  pch.h
Projects/Hacks/Mafia2SDK/classes/: SAgentCommandAim.hpp  SAgentCommandLookAt.hpp
Projects/Hacks/Mafia2SDK/include/: detours.h  m2sdk.h
Projects/Hacks/Mafia2SDK/include/classes/: CCar.hpp  CCarActionBreakIn.hpp  CCarActionCloseHood.hpp  CCarActionCloseTrunk.hpp  CCarActionEnter.hpp  CCarActionOpenHood.hpp  CCarActionOpenTrunk.hpp  CDoor.hpp  (+11 more)
Projects/Hacks/Mafia2SDK/utils/: Memory.hpp
Projects/Hacks/MafiaSDK/: MafiaSDK.h  Main.cpp  Resource.rc
Projects/Hacks/MafiaSDK/Engine/: DirectHook.hpp  I3D_Driver.hpp  I3D_Driver.hpp~Stashed changes  I3D_Frame.hpp  I3D_Light.hpp  I3D_Mesh_Level.hpp  I3D_Mesh_Object.hpp  I3D_Model.hpp  I3D_Projector.hpp  I3D_Sector.hpp  I3D_Sound.hpp  IGraph.hpp  ISND_Source.hpp  ITexture.hpp  Math.hpp
Projects/Hacks/MafiaSDK/Game/: C_Actor.hpp  C_Blood.hpp  C_BloodManager.hpp  C_Bottle.hpp  C_Camera.hpp  C_Car.hpp  C_Detector.hpp  C_Door.hpp  C_DropInWeapon.hpp  C_Entity.hpp  C_Game.hpp  C_Human.hpp  C_I3D_Cache.hpp  C_Indicators.hpp  C_Mission.hpp  C_ParticleManager.hpp  C_Player.hpp  C_Program.hpp  C_Vehicle.hpp  GM_Menu.hpp  G_TextDatabase.hpp  Input.hpp  ai_action_manager.hpp  ai_follow_manager.hpp  c_bridge.hpp
Projects/Hacks/MafiaSDK/Utils/: Helpers.hpp  MemoryPatcher.h
Projects/Hacks/ModLoader/: CMakeLists.txt  Main.cpp  Resource.rc  pch.h
Projects/Hacks/MultiplayerMod/: CMakeLists.txt  ClientGame.cpp  ClientGame.h  ClientManager.cpp  ClientManager.h  Commands.cpp  Commands.h  Main.cpp  Multiplayer.cpp  Multiplayer.h  RmlUi.cpp
Projects/Hacks/MultiplayerMod/Elements/: ClientDummy.cpp  ClientEntity.cpp  ClientHuman.cpp  ClientHuman.h  ClientObject.cpp  ClientObject.h  ClientPlayer.cpp  ClientPlayer.h  ClientVehicle.cpp  ClientVehicle.h  Elements.h  NetBlenderHuman.cpp  NetBlenderHuman.h  NetBlenderVehicle.cpp  NetBlenderVehicle.h
Projects/Hacks/MultiplayerMod/Hacks/: Hacks.cpp  Hooks.cpp
Projects/Hacks/MultiplayerMod/ScriptingFunctions/: EntityFunctions.cpp  GameFunctions.cpp  HumanFunctions.cpp  RenderingFunctions.cpp  ScriptingFunctions.cpp  ScriptingFunctions.h  UtilFunctions.cpp  VehicleFunctions.cpp
Projects/Hacks/MultiplayerMod/Utils/: VectorTools.cpp  VectorTools.h
Projects/Hacks/MultiplayerModOne/: CHookedDirect3D9Util.cpp  CHookedDirect3D9Util.h  CMakeLists.txt  ClientGame.cpp  ClientGame.h  ClientManager.cpp  ClientManager.h  Commands.cpp  IDirect3D9Hook.h  IDirect3DDevice9Hook.cpp  LoadScreen.cpp  LoadScreen.h  Main.cpp  Multiplayer.cpp  Multiplayer.h  Renderer.cpp  Renderer.h  Resource.rc  RmlUi.cpp  RmlUi.h  stdafx.h  targetver.h
Projects/Hacks/MultiplayerModOne/Elements/: ClientBridge.cpp  ClientBridge.h  ClientDoor.cpp  ClientDoor.h  ClientDummy.cpp  ClientDummy.h  ClientEntity.cpp  ClientEntity.h  ClientHuman.cpp  ClientHuman.h  ClientObject.cpp  ClientObject.h  ClientPlayer.cpp  ClientPlayer.h  ClientVehicle.cpp  ClientVehicle.h  Elements.h  NetBlenderBridge.cpp  NetBlenderBridge.h  NetBlenderHuman.cpp  NetBlenderHuman.h  NetBlenderVehicle.cpp  NetBlenderVehicle.h
Projects/Hacks/MultiplayerModOne/Hacks/: Hacks.h  Hooks.cpp
Projects/Hacks/MultiplayerModOne/ScriptingFunctions/: EntityFunctions.cpp  GameFunctions.cpp  HumanFunctions.cpp  ScriptingFunctions.cpp  ScriptingFunctions.h  UtilFunctions.cpp  VehicleFunctions.cpp
Projects/Hacks/MultiplayerModOne/Utils/: Color.h  MSDK.cpp  VectorTools.cpp  VectorTools.h
Projects/Hacks/MultiplayerModTwo/: CHookedDirect3D9Util.cpp  CHookedDirect3D9Util.h  CMakeLists.txt  ClientGame.cpp  ClientGame.h  ClientManager.cpp  ClientManager.h  Commands.cpp  Commands.h  IDirect3D9Hook.cpp  IDirect3D9Hook.h  LoadScreen.cpp  Main.cpp  Multiplayer.cpp  Multiplayer.h  stdafx.cpp  stdafx.h
Projects/Hacks/MultiplayerModTwo/Elements/: ClientEntity.cpp  ClientEntity.h  ClientHuman.cpp  ClientHuman.h  ClientPlayer.cpp  ClientPlayer.h  ClientVehicle.cpp  ClientVehicle.h  NetBlenderHuman.cpp  NetBlenderHuman.h  NetBlenderVehicle.cpp  NetBlenderVehicle.h
Projects/Hacks/MultiplayerModTwo/Hacks/: Hacks.cpp  Hacks.h  Hooks.cpp  Hooks.h
Projects/Hacks/MultiplayerModTwo/ScriptingFunctions/: EntityFunctions.cpp  GameFunctions.cpp  HumanFunctions.cpp  RenderingFunctions.cpp  ScriptingFunctions.cpp  ScriptingFunctions.h  UtilFunctions.cpp  VehicleFunctions.cpp
Projects/Hacks/MultiplayerModTwo/Utils/: M2SDK.cpp  MSDK.cpp  VectorTools.cpp  VectorTools.h
Projects/Hacks/WindowHacks/: CMakeLists.txt  Main.cpp  Resource.rc  pch.h
Projects/Launcher/: CMakeLists.txt  Launcher.aps  Launcher.cpp  Launcher.h  Launcher.rc  Launcher.xml  Watermark.hbf  app.manifest  pch.h
Projects/Launcher/Licenses/: ENetLicense.txt  MafiaSDK.txt  luaLicense.txt
Projects/MafiaC/: CMakeLists.txt  CrashReasons.cpp  HackSupport.def  HackSupportDebug.def  Main.cpp  Resource.rc  pch.h
Projects/MafiaCNetworkShared/: CMakeLists.txt  Resource.rc  pch.cpp
Projects/MafiaCNetworkShared/src/: NetBlenderLerp.cpp  NetBlenderLerp.h
Projects/d3d8to9/: CMakeLists.txt
Projects/d3d8to9/source/: d3d8to9.cpp  d3d8to9.hpp  d3d8to9_base.cpp  d3d8to9_device.cpp  d3d8to9_index_buffer.cpp  d3d8to9_surface.cpp  d3d8to9_swap_chain.cpp  d3d8to9_texture.cpp  d3d8to9_vertex_buffer.cpp  d3d8to9_volume.cpp  d3d8types.cpp  d3dx9.hpp
(+62 files in other folders)
